--- a/WpfSmsApp/WpfSmsApp/View/LoginView.xaml
+++ b/WpfSmsApp/WpfSmsApp/View/LoginView.xaml
@@ -1,25 +1,63 @@
 ﻿<mah:MetroWindow
-        x:Class="WpfSmsApp.View.LoginView"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-        xmlns:local="clr-namespace:WpfSmsApp.View"
-        mc:Ignorable="d"
-        Title="Login" Height="400" Width="500">
+    x:Class="WpfSmsApp.View.LoginView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:local="clr-namespace:WpfSmsApp.View"
+    mc:Ignorable="d"
+    Title="Login" Height="300" Width="400" 
+    ShowMaxRestoreButton="False" ShowMinButton="False" ShowCloseButton="False" 
+    ResizeMode="NoResize" Loaded="MetroWindow_Loaded">
+    
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="0.5*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
+            <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
 
-        <Button Grid.Row="2" Content="로그인" 
-                Margin="5" Width="150" Height="50"
-                Background="Blue" Foreground="White">
-            
-        </Button>
+        <TextBox Name="txtUserEmail" Grid.Row="1" Margin="10"
+                 mah:TextBoxHelper.Watermark="UserEmail" KeyDown="txtUserEmail_KeyDown"/>
+        <PasswordBox Name="txtPassword" Grid.Row="2" Margin="10"
+                 mah:TextBoxHelper.Watermark="Password" KeyDown="txtPassword_KeyDown"/>
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center">
+            <Button Name="btnLogin" Content="로그인"
+                Margin="5" Width="100" Height="40" FontSize="13"
+                Background="RoyalBlue" Foreground="White"
+                Click="btnLogin_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}" Margin="5,0"/>
+                            <Image Source="/Resources/unlock.png"
+                                   Width="20" Height="20"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+            <Button Name="btnExit" Content="종료"
+                Margin="5" Width="100" Height="40" FontSize="13"
+                Background="AliceBlue" Foreground="DarkSlateBlue"
+                Click="btnExit_Click">
+                <Button.ContentTemplate>
+                    <DataTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding}" Margin="5,0"/>
+                            <Image Source="/Resources/bansign.png"
+                                   Width="20" Height="20"/>
+                        </StackPanel>
+                    </DataTemplate>
+                </Button.ContentTemplate>
+            </Button>
+        </StackPanel>
+        <Label Name="lblResult" Grid.Row="4" Content="Result" 
+               Foreground="OrangeRed" FontWeight="Bold" FontSize="14"
+               HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+
+
     </Grid>
 </mah:MetroWindow>
